force-app/main/default/objects/Letter__c/Letter__c.object-meta.xml
<CustomObject>
    <label>Letter</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Letter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>