force-app/main/default/objects/Letter__c/fields/AnswerNeeded__c.field-meta.xml
<CustomField>
    <fullName>AnswerNeeded__c</fullName>
    <label>Answer Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>