force-app/main/default/objects/Letter__c/fields/ContractAdministrator__c.field-meta.xml
<CustomField>
    <fullName>ContractAdministrator__c</fullName>
    <label>Contract Administrator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>