force-app/main/default/objects/Letter__c/fields/LetterCode__c.field-meta.xml
<CustomField>
    <fullName>LetterCode__c</fullName>
    <label>Letter Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>