force-app/main/default/objects/Letter__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <label>Penalty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>