force-app/main/default/objects/Letter__c/fields/SendDate__c.field-meta.xml
<CustomField>
    <fullName>SendDate__c</fullName>
    <label>Send Date</label>
    <type>Date</type>
</CustomField>