force-app/main/default/objects/Letter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Closed in Delay</fullName>
            </value>
            <value>
                <fullName>Closed on Time</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>No Actions</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>