force-app/main/default/objects/Letter__c/fields/Vessel__c.field-meta.xml
<CustomField>
    <fullName>Vessel__c</fullName>
    <label>Vessel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>