force-app/main/default/objects/Letter__c/fields/VesselManager__c.field-meta.xml
<CustomField>
    <fullName>VesselManager__c</fullName>
    <formula>IF(
or(ContractAdministrator__c = $User.Id , $User.CommunityNickname = &quot;User15831739644296457125&quot; , $User.FirstName = &quot;Armando&quot;), 1 , 0)</formula>
    <label>Vessel Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>