force-app/main/default/objects/Letter__c/recordTypes/Received.recordType-meta.xml
<RecordType>
    <fullName>Received</fullName>
    <active>true</active>
    <label>Received</label>
</RecordType>