force-app/main/default/objects/Letter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LetterGroup__c</columns>
    <columns>NAME</columns>
    <columns>LetterCode__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Subject__c</columns>
    <columns>ReceivedDate__c</columns>
    <columns>SendDate__c</columns>
    <columns>Penalty__c</columns>
    <columns>AnswerNeeded__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Commercial</role>
        <role>VesselContractAdministrator</role>
    </sharedTo>
</ListView>